MDEV-38621: Position mismatch in binlog for partial_row_log_events

Partial_rows_log_event types would incorrectly write their end_log_pos.
I.e., they would start at 0 and work their way up to larger end_log_pos
values. However, events that first write to a cache and then are moved
to the binlog _should_ always write 0 for their end_log_pos.

The problem is that the Log_event() base constructor call was missed
when constructing a Partial_rows_log_event, which failed to correctly
set the cache_type.