sql/log.cc
@@ -7017,8 +7017,8 @@ Event_log::flush_and_set_pending_rows_event(THD *thd, Rows_log_event* event,
     ulong max_rows_ev_len= slave_max_allowed_packet - rows_ev_metadata_len;
     if (pending->rows_data_size_exceeds(max_rows_ev_len))
     {
-      Rows_log_event_fragmenter fragmenter=
-          Rows_log_event_fragmenter(slave_max_allowed_packet, pending);
+      Rows_log_event_fragmenter fragmenter= Rows_log_event_fragmenter(
+          thd, is_transactional, slave_max_allowed_packet, pending);
       Rows_log_event_fragmenter::Fragmented_rows_log_event *frag_ev;
       if (!(frag_ev= fragmenter.fragment()))
       {
